--- a/terraform/Dockerfile
+++ b/terraform/Dockerfile
@@ -1,3 +1,3 @@
 FROM php:apache
-RUN echo '<?php echo $_ENV["HOSTNAME"]; ?>' > /var/www/html/index.php
+RUN echo '<?php echo v1 $_ENV["HOSTNAME"]; ?>' > /var/www/html/index.php
 EXPOSE 80
