--- a/terraform/Dockerfile
+++ b/terraform/Dockerfile
@@ -1,3 +1,3 @@
 FROM php:apache
-RUN echo 'v3 <?php $_ENV["HOSTNAME"]; ?>' > /var/www/html/index.php
+RUN echo 'v4 <?php echo $_ENV["HOSTNAME"]; ?>' > /var/www/html/index.php
 EXPOSE 80
